build_output6.txt
warning: neuro-spike-kernels@0.9.2: ✓ compiled spiking_network.cu → spiking_network_sm_120.ptx (PTX version patched to 8.5)
warning: neuro-spike-kernels@0.9.2: ✓ compiled vector_similarity.cu → vector_similarity_sm_120.ptx (PTX version patched to 8.5)
warning: neuro-spike-kernels@0.9.2: ✓ compiled satsolver.cu → satsolver_sm_120.ptx (PTX version patched to 8.5)
   Compiling neuro-spike-core v0.9.2 (/home/raulmc/ship_of_theseus_rs/neuro-spike/neuro-spike-core)
error[E0432]: unresolved import `neuro_spike_core::trading`
  --> neuro-spike/neuro-spike-core/src/bin/market_pilot.rs:23:5
   |
23 | use neuro_spike_core::trading;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ no `trading` in the root

error[E0432]: unresolved import `neuro_spike_core::market`
  --> neuro-spike/neuro-spike-core/src/bin/market_pilot.rs:24:5
   |
24 | use neuro_spike_core::market;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ no `market` in the root

error[E0432]: unresolved import `neuro_spike_core::backend`
  --> neuro-spike/neuro-spike-core/src/bin/market_pilot.rs:25:5
   |
25 | use neuro_spike_core::backend;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ no `backend` in the root
   |
help: consider importing this module instead
   |
25 - use neuro_spike_core::backend;
25 + use candle_core::backend;
   |

For more information about this error, try `rustc --explain E0432`.
error: could not compile `neuro-spike-core` (bin "market_pilot") due to 3 previous errors
